--- a/packages/happy-cli/.env.dev-local-server
+++ b/packages/happy-cli/.env.dev-local-server
@@ -6,7 +6,7 @@ HAPPY_HOME_DIR=~/.happy-dev
 HAPPY_SERVER_URL=http://localhost:3005
 
 # Optional: default Claude model at startup (uncomment and change as needed)
-# ANTHROPIC_MODEL=claude-opus-4-6
+ANTHROPIC_MODEL=claude-opus-4-6
 # ANTHROPIC_MODEL=claude-sonnet-4-5-20250929
 # ANTHROPIC_MODEL=claude-haiku-4-5-20251001
 HAPPY_WEBAPP_URL=http://localhost:8081
