更新 Docker Compose 配置，添加 server 服务的 env_file 引用以支持 GitHub OAuth 配置；更新 README.md，详细说明 GitHub OAuth 所需环境变量及 Docker 使用说明；新增 eas.json 文件以支持 EAS 构建配置；优化 happy-server 的 dev 脚本路径处理。

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,10 +54,14 @@ services:
       echo 'MinIO bucket handy ready';
       "
 
+  # Server 的 APP_URL、GITHUB_* 从 packages/happy-server/.env 注入（路径相对本 compose 文件）。
+  # 修改该 .env 后需执行：docker compose up -d --force-recreate server
   server:
     build:
       context: .
       dockerfile: Dockerfile.server
+    env_file:
+      - packages/happy-server/.env
     environment:
       NODE_ENV: production
       PORT: "3005"
